Initial setup to leverage db operations off the main thread. (Yes, it was doing db stuff on the main thread)